[package]
name = "blog_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multithread"]
multithread = ["rayon"]

[dependencies]
ansi_term = "0.12"
html-escape = "0.2.9"
rayon = {version = "1.5", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"